# bhtool

./: CMakeLists.txt  readme.md
apps/: CMakeLists.txt  bhtool.cpp
cmake/Modules/: FindCoreFoundation.cmake  FindLibcrypto.cmake  FindLibgit2.cmake  FindLibssh2.cmake  FindSecurity.cmake  Findlibcurl.cmake
docs/: CMakeLists.txt  mainpage.md
include/bhtool/: bhtool.hpp  color_streams.h  repo.hpp  spc.hpp  stderrred.hpp
src/: CMakeLists.txt  bhtool.cpp  bhtool_lib.cpp  repo.cpp  spc.cpp  stderrred.cpp
tests/: CMakeLists.txt  test_bhtool.cpp  test_repo.cpp  test_stderrred.cpp  testbhtool.cpp  teststderrred.cpp  utils_test.hpp
